# Finite-element-method-FEM

./: .gitignore  .gitmodules  .travis.yml  Pipfile  README.de.rst  README.md  README.rst  archives.html  authors.html  categories.html  index.html  pelicanconf.py  publishconf.py  requirements.txt  tags.html
2017/Gascoigne/doc/: CMakeLists.txt  Doxyfile  Doxyfile.generic  Doxyfile.in  doxygen.css  headerFile  libstdc++.link  libstdc++.tag  taginformation.cmake.in
2017/Gascoigne/src/: CMakeLists.txt
2017/Gascoigne/src/Common/: backup.cc  backup.h  cginfo.cc  cginfo.h  compareclass.h  compose_name.cc  compose_name.h  compvector.cc  compvector.h  dataformathandler.cc  dataformathandler.h  derivativevector.h  entrymatrix.h  errormacros.h  extrapolator.cc  extrapolator.h  filescanner.cc  filescanner.h  fixarray.cc  fixarray.h  gascoignemath.h  giota.h  gostream.h  grandom.h  linescanner.cc  linescanner.h  mult.h  nlinfo.cc  nlinfo.h  nmatrix.cc  nmatrix.h  numderivative.h  numfixarray.h  nvector.cc  nvector.h  paramfile.h  set2vec.cc  set2vec.h  stlio.cc  stlio.h  (+10 more)
2017/Gascoigne/src/Interface/: application.h  boundaryequation.h  boundaryfunctional.h  boundaryrighthandside.h  componentinformation.h  curve.h  datacontainer.h  diracrighthandside.h  dirichletdata.h  discretizationinterface.h  domainfunction.h  domainfunctional.h  domainrighthandside.h  equation.h  exactsolution.h  faceequation.h  feminterface.h  functional.h  gascoigne.h  glsequation.h  hnstructureinterface.h  iluinterface.h  integrationformulainterface.h  integratorinterface.h  lpsequation.h  matrixentrytype.h  matrixinterface.h  meshagentinterface.h  meshinterface.h  meshtransferinterface.h  mginterpolatorinterface.h  multigridmeshinterface.h  multilevelsolverinterface.h  numericinterface.h  patchmesh.h  periodicdata.h  periodicmapping.h  pointfunctional.h  problemdescriptorinterface.h  solverinterface.h  (+4 more)
2017/Gascoigne/src/LinAlg/: cfdblock3d.cc  cfdblock3d.h  cg.h  cg.xx  cgmatrix.h  columndiagstencil.cc  columndiagstencil.h  columnstencil.cc  columnstencil.h  componentsparsestructureadaptor.h  dynamicblockilu.cc  dynamicblockilu.h  dynamicblockilu.xx  dynamicblockmatrix.cc  dynamicblockmatrix.h  dynamicblockmatrix.xx  dynamicstencil.h  fmatrixblock.cc  fmatrixblock.h  fmatrixblock.xx  gmres.h  gmres.xx  nodematrix.cc  nodematrix.h  nodesparsestructureadaptor.h  (+33 more)
(+922 files in other folders)
